--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2"
   },
   "name": "pruebavsc",
   "version": "1.0.0",
   "main": "App.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
